--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,48 @@
 }
 
 .card{
-
-    display: flex;
-    flex-wrap: wrap;
+    background-color: var(--cor-azul-claro);
+    padding: 0.2em;
+    width: 10rem;
 }
+
+.card-body{
+
+    padding: 0;
+    margin: 0;
+    margin-top: 0.5em;
+}
+
+.card-text{
+
+    font-family: var(--font-do-titulo);
+    font-size: 1.5em;
+    text-align: center;
+    font-weight: bold;
+    color: var(--cor-azul-escuro);
+}
+
+
+.meio__cards{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 2em;
+    margin-top: 5em;
+    
+    
+}
+
+.nome{
+    margin-top: 1em;
+    background-color: #ffffff;
+    color: var(--cor-azul-escuro);
+}
+
+
+
+
+
+
